--- a/project/index.html
+++ b/project/index.html
@@ -8,25 +8,39 @@
 </head>
 
 <body>
-    <div class="d-flex flex-column justify-content-center w-100 h-100">
-</div>
-</div>
-    <br>
-    <div class="menu">
-        <ul>
-            <li><a href="index.html" class='closing-button1'><span>Главная</span></a></li>
-            <li><a href="#" class='closing-button2'><span>Регистрация</span></a></li>
-            <li><a href="#" class='closing-button3'><span>Вход</span></a></li>
-        </ul>
+    <div class='wrapper'>
+        <div class="content">
+            <div class="d-flex flex-column justify-content-center w-100 h-100">
+            </div>
+            <br>
+            <header class='mainmenu'>
+                <div class="menu">
+                    <ul>
+                        <li><a href="#" class='closing-button2'><span>Москва</span></a></li>
+                        <li><a href="#" class='closing-button3'><span>+7(XXX)XXX-XX-XX</span></a></li>
+                        <li><a href="#" class='closing-button4'><span>Регистрация</span></a></li>
+                        <li><a href="#" class='closing-button5'><span>Вход</span></a></li>
+                    </ul>
+                </div>
+            </header>
+            <a href="index.html" class='closing-button1'><span>Lorem</span></a>
+            <div class='forma'>
+                <form action="#">
+                    <input type="text">
+                    <input type="text">
+                    <input type="password">
+                    <input type="email">
+                    <input type="submit">
+                </form>
+            </div>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+            </p>
+        </div>
+        <div class="footer">
+
+        </div>
     </div>
-    <hr>
-    <form action="#">
-        <input type="text">
-        <input type="text">
-        <input type="password">
-        <input type="email">
-        <input type="submit">
-    </form>
 </body>
 
 </html>
